# mxp-mac

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml
src/: mdxconfig.h  mdxplayer.cpp  mdxplayer.h  mxp.cpp
